---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 2020-03-21
  Bugfixes:
    - Added missing initialization of turret index
---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 2020-03-20
  Changes:
    - Redesigned surface handling again to be more perfomant
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 2020-03-19
  Changes:
    - Added changelog file
    - Changed dependency to base 0.18
  Bugfixes:
    - Redesigned surface handling to ensure compatibility with other planets and Blueprint Lab
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 2020-02-20
  Changes:
    - Ported to 0.18
    - Renamed mod for upload in mod portal
    - Matched versioning to Factorio versions

  Graphics:
    - Added thumbnail